more fields in account, update info method
