# src/main/kotlin/com/mvnh/entities/account/AccountUpdatePassword.kt
@@ -4,6 +4,6 @@ import kotlinx.serialization.SerialName
 import kotlinx.serialization.Serializable
 
 @Serializable
-data class AccountChangePassword(val nickname: String,
+data class AccountUpdatePassword(val nickname: String,
                                  @SerialName("current_password") val currentPassword: String,
                                  @SerialName("new_password") val newPassword: String)
